# preference-backend

./: .env.example  .gitignore  Dockerfile  README.md  convo.json  docker-compose.neo4j.yml  docker-compose.yml  payload.json  prompt.txt  pyproject.toml
app/: graphiti_client.py  main.py  utils.py
app/models/: conversation.py  preferences.py  question.py  question_request.py  summary.py
app/routes/: content.py  conversation_summary.py  get_conversation.py  ingest.py  preferences.py  questions.py  summary.py
tests/: conftest.py  curl.json  curl.txt  test_ingest.py  test_questions.py
